[gd_scene load_steps=4 format=3 uid="uid://b1n2gocmtoqcb"]

[ext_resource type="Script" path="res://Utility/item_option.gd" id="1_fa34s"]
[ext_resource type="Texture2D" uid="uid://c5lhr4tgssgso" path="res://Textures/Items/Weapons/sword.png" id="1_pv4nd"]
[ext_resource type="FontFile" uid="uid://bmig6pfxgymgt" path="res://Font/tenderness.otf" id="2_8d8xv"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2i(180, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -460.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545098, 0.545098, 0.545098, 1)
script = ExtResource("1_fa34s")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_pv4nd")

[node name="lbl_name" type="Label" parent="."]
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_8d8xv")
text = "Name"
horizontal_alignment = 1

[node name="lbl_description" type="Label" parent="."]
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_8d8xv")
theme_override_font_sizes/font_size = 8
text = "Description of Item"
autowrap_mode = 3

[node name="lbl_level" type="Label" parent="."]
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_8d8xv")
theme_override_font_sizes/font_size = 12
text = "level: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
